# NES-Emulator

./: .gitignore  CMakeLists.txt
src/: ScreenInfo.h  Vector2.h  main.cpp
src/CPU-6502/: Bus.cpp  Bus.h  olc6502.cpp  olc6502.h
src/NES/: Cartridge.cpp  Cartridge.h  Mapper.cpp  Mapper.h  PPU.cpp  PPU.h
src/NES/Mappers/: Mapper_000.cpp  Mapper_000.h
src/SDL/: Input.h  SetupSDL.cpp  SetupSDL.h
